v2.0.0a3/_sources/examples/2_multi_fidelity/1_mlp_epochs.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/2_multi_fidelity/1_mlp_epochs.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_2_multi_fidelity_1_mlp_epochs.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_2_multi_fidelity_1_mlp_epochs.py:


Multi-Layer Perceptron Using Multiple Epochs
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Example for optimizing a Multi-Layer Perceptron (MLP) using multiple budgets.
Since we want to take advantage of multi-fidelity, the ``MultiFidelityFacade`` is a good choice. By default,
``MultiFidelityFacade`` internally runs with `hyperband <https://arxiv.org/abs/1603.06560>`_ as
intensification, which is a combination of an
aggressive racing mechanism and Successive Halving. Crucially, the target function function
must accept a budget variable, detailing how much fidelity smac wants to allocate to this
configuration.

MLP is a deep neural network, and therefore, we choose epochs as fidelity type. This implies,
that ``budget`` specifies the number of epochs smac wants to allocate. The digits dataset
is chosen to optimize the average accuracy on 5-fold cross validation.

.. note::

    This example uses the ``MultiFidelityFacade`` facade, which is the closest implementation to
    `BOHB <https://github.com/automl/HpBandSter>`_.

.. GENERATED FROM PYTHON SOURCE LINES 22-143




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [INFO][abstract_initial_design.py:133] Using 5 initial design configurations and 0 additional configurations.
    [INFO][successive_halving.py:146] Successive Halving uses budget type BUDGETS with eta 3, min budget 5, and max budget 25.
    [INFO][abstract_intensifier.py:479] Added config 6b0504 as new incumbent because there are no incumbents yet.
    [INFO][abstract_intensifier.py:551] Added config 622bf8 and rejected config 6b0504 as incumbent because it is not better than the incumbents on 1 instances:
    [INFO][configspace.py:175] --- batch_size: None -> 155
    [INFO][configspace.py:175] --- learning_rate_init: None -> 0.006677306766018313
    [INFO][configspace.py:175] --- n_layer: 4 -> 5
    [INFO][configspace.py:175] --- n_neurons: 123 -> 56
    [INFO][configspace.py:175] --- solver: 'lbfgs' -> 'adam'
    [INFO][abstract_intensifier.py:551] Added config 8db41e and rejected config 622bf8 as incumbent because it is not better than the incumbents on 1 instances:
    [INFO][configspace.py:175] --- n_layer: 5 -> 2
    [INFO][configspace.py:175] --- n_neurons: 56 -> 75
    [INFO][configspace.py:175] --- solver: 'adam' -> 'lbfgs'
    [INFO][abstract_intensifier.py:551] Added config 15101e and rejected config 8db41e as incumbent because it is not better than the incumbents on 1 instances:
    [INFO][configspace.py:175] --- batch_size: None -> 182
    [INFO][configspace.py:175] --- learning_rate_init: None -> 0.0016993391834713837
    [INFO][configspace.py:175] --- n_layer: 2 -> 1
    [INFO][configspace.py:175] --- solver: 'lbfgs' -> 'adam'
    [INFO][abstract_intensifier.py:551] Added config 7bd1c9 and rejected config 15101e as incumbent because it is not better than the incumbents on 1 instances:
    [INFO][configspace.py:175] --- activation: 'tanh' -> 'relu'
    [INFO][configspace.py:175] --- n_layer: 1 -> 4
    [INFO][configspace.py:175] --- n_neurons: 75 -> 255
    [INFO][configspace.py:175] --- solver: 'adam' -> 'lbfgs'
    [INFO][abstract_intensifier.py:551] Added config 5df970 and rejected config 7bd1c9 as incumbent because it is not better than the incumbents on 1 instances:
    [INFO][configspace.py:175] --- activation: 'relu' -> 'tanh'
    [INFO][configspace.py:175] --- batch_size: None -> 261
    [INFO][configspace.py:175] --- learning_rate_init: None -> 0.002753672312748228
    [INFO][configspace.py:175] --- n_neurons: 255 -> 160
    [INFO][configspace.py:175] --- solver: 'lbfgs' -> 'adam'
    [INFO][smbo.py:303] Configuration budget is exhausted:
    [INFO][smbo.py:304] --- Remaining wallclock time: -1.3994839191436768
    [INFO][smbo.py:305] --- Remaining cpu time: inf
    [INFO][smbo.py:306] --- Remaining trials: 171
    Default cost: 0.36672856700711853
    Incumbent cost: 0.02282110801609405






|

.. code-block:: default


    import warnings

    import numpy as np
    from ConfigSpace import (
        Categorical,
        Configuration,
        ConfigurationSpace,
        EqualsCondition,
        Float,
        InCondition,
        Integer,
    )
    from sklearn.datasets import load_digits
    from sklearn.model_selection import StratifiedKFold, cross_val_score
    from sklearn.neural_network import MLPClassifier

    from smac import MultiFidelityFacade as MFFacade
    from smac import Scenario

    __copyright__ = "Copyright 2021, AutoML.org Freiburg-Hannover"
    __license__ = "3-clause BSD"


    digits = load_digits()


    class MLP:
        @property
        def configspace(self) -> ConfigurationSpace:
            # Build Configuration Space which defines all parameters and their ranges.
            # To illustrate different parameter types, we use continuous, integer and categorical parameters.
            cs = ConfigurationSpace()

            n_layer = Integer("n_layer", (1, 5), default=1)
            n_neurons = Integer("n_neurons", (8, 256), log=True, default=10)
            activation = Categorical("activation", ["logistic", "tanh", "relu"], default="tanh")
            solver = Categorical("solver", ["lbfgs", "sgd", "adam"], default="adam")
            batch_size = Integer("batch_size", (30, 300), default=200)
            learning_rate = Categorical("learning_rate", ["constant", "invscaling", "adaptive"], default="constant")
            learning_rate_init = Float("learning_rate_init", (0.0001, 1.0), default=0.001, log=True)

            # Add all hyperparameters at once:
            cs.add_hyperparameters([n_layer, n_neurons, activation, solver, batch_size, learning_rate, learning_rate_init])

            # Adding conditions to restrict the hyperparameter space...
            # ... since learning rate is used when solver is 'sgd'.
            use_lr = EqualsCondition(child=learning_rate, parent=solver, value="sgd")
            # ... since learning rate initialization will only be accounted for when using 'sgd' or 'adam'.
            use_lr_init = InCondition(child=learning_rate_init, parent=solver, values=["sgd", "adam"])
            # ... since batch size will not be considered when optimizer is 'lbfgs'.
            use_batch_size = InCondition(child=batch_size, parent=solver, values=["sgd", "adam"])

            # We can also add multiple conditions on hyperparameters at once:
            cs.add_conditions([use_lr, use_batch_size, use_lr_init])

            return cs

        def train(self, config: Configuration, seed: int = 0, budget: int = 25) -> float:
            # For deactivated parameters (by virtue of the conditions),
            # the configuration stores None-values.
            # This is not accepted by the MLP, so we replace them with placeholder values.
            lr = config["learning_rate"] if config["learning_rate"] else "constant"
            lr_init = config["learning_rate_init"] if config["learning_rate_init"] else 0.001
            batch_size = config["batch_size"] if config["batch_size"] else 200

            with warnings.catch_warnings():
                warnings.filterwarnings("ignore")

                classifier = MLPClassifier(
                    hidden_layer_sizes=[config["n_neurons"]] * config["n_layer"],
                    solver=config["solver"],
                    batch_size=batch_size,
                    activation=config["activation"],
                    learning_rate=lr,
                    learning_rate_init=lr_init,
                    max_iter=int(np.ceil(budget)),
                    random_state=seed,
                )

                # Returns the 5-fold cross validation accuracy
                cv = StratifiedKFold(n_splits=5, random_state=seed, shuffle=True)  # to make CV splits consistent
                score = cross_val_score(classifier, digits.data, digits.target, cv=cv, error_score="raise")

            return 1 - np.mean(score)


    if __name__ == "__main__":
        mlp = MLP()

        # Define our environment variables
        scenario = Scenario(
            mlp.configspace,
            walltime_limit=40,  # After 40 seconds, we stop the hyperparameter optimization
            n_trials=200,  # Evaluate max 200 different trials
            min_budget=5,  # Train the MLP using a hyperparameter configuration for at least 5 epochs
            max_budget=25,  # Train the MLP using a hyperparameter configuration for at most 25 epochs
            n_workers=1,
        )

        # We want to run five random configurations before starting the optimization.
        initial_design = MFFacade.get_initial_design(scenario, n_configs=5)

        # Create our SMAC object and pass the scenario and the train method
        smac = MFFacade(
            scenario,
            mlp.train,
            initial_design=initial_design,
            overwrite=True,
        )

        # Let's optimize
        incumbent = smac.optimize()

        # Get cost of default configuration
        default_cost = smac.validate(mlp.configspace.get_default_configuration())
        print(f"Default cost: {default_cost}")

        # Let's calculate the cost of the incumbent
        incumbent_cost = smac.validate(incumbent)
        print(f"Incumbent cost: {incumbent_cost}")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  45.039 seconds)


.. _sphx_glr_download_examples_2_multi_fidelity_1_mlp_epochs.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 1_mlp_epochs.py <1_mlp_epochs.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 1_mlp_epochs.ipynb <1_mlp_epochs.ipynb>`
